# sonic-mgmt-framework

./: .gitignore  @10.11.56.26  LICENSE  Makefile  Makefile.am  README.md  azure-pipelines.yml  configure.ac  go.mod  go.sum  go_server.sh  package.cfg
.github/: copilot-instructions.md
.github/workflows/: codeql-analysis.yml  codeql.yml
CLI/: Makefile
CLI/actioner/: README_cli_client.md  cli_client.py  cli_log.py  sonic-cli-acl.py  sonic-cli-event.py  (+8 more)
config/: cfg_mgmt.json
debian/: .gitignore  changelog  control  copyright  files  rules  sonic-certfix.install  sonic-certfix.postinst  sonic-hamd.install  sonic-hamd.postinst  sonic-host-service.install  sonic-libnss-ham.install  sonic-libnss-ham.postinst  sonic-mgmt-framework.install
goyang-modified-files/: README.md  annotate.go  entry.go  goyang.patch  yang.go
models/: Makefile  codegen.config  openapi_codegen.mk  yang_to_openapi.mk
observabilityd/: Makefile  README.md  go.mod  go.sum  main.go  observabilityd.service
patches/: jsonquery.patch  xmlquery.patch  xpath.patch
rest/: Makefile
scripts/: org.sonic.hostservice.conf  sonic-hostservice.service  sonic_host_server.py
sonic/: nas_ndi_acl_utl.h  nas_ndi_event_logs.h  nas_ndi_int.h  nas_ndi_mac_utl.h  nas_ndi_port_map.h  nas_ndi_port_utils.h  nas_ndi_qos_utl.h  nas_ndi_utils.h
src/: hal_shell.c  nas_ndi_acl.cpp  nas_ndi_acl_utl.cpp  nas_ndi_init.c  nas_ndi_lag.c  nas_ndi_mac.c  nas_ndi_mac_utl.cpp  nas_ndi_mirror.cpp  nas_ndi_packet.c  nas_ndi_port.c  nas_ndi_port_map.cpp  nas_ndi_port_utils.cpp  nas_ndi_qos_buffer_pool.cpp  nas_ndi_qos_buffer_profile.cpp  nas_ndi_qos_map.cpp  nas_ndi_qos_policer.cpp  nas_ndi_qos_port.cpp  nas_ndi_qos_priority_group.cpp  nas_ndi_qos_queue.cpp  nas_ndi_qos_scheduler.cpp  nas_ndi_qos_scheduler_group.cpp  nas_ndi_qos_wred.cpp  nas_ndi_route.c  nas_ndi_router_interface.c  nas_ndi_sflow.cpp  nas_ndi_stg.cpp  nas_ndi_switch.cpp  nas_ndi_utils.cpp  nas_ndi_vlan.c
ygot-modified-files/: container.go  debug.go  leaf.go  list.go  node.go  reflect.go  schema.go  steps-patch-changes.txt  string_type.go  unmarshal.go  util_schema.go  validate.go  ygot.patch
(+1133 files in other folders)
